<resources>
    <string name="app_name">SaluDate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Notifications</string>
    <string name="menu_slideshow">Night Mode</string>
    <string name="menu">Menu</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="night_mode">Night mode</string>
    <string name="accounts">Account</string>
    <string name="notifications">Notification</string>
    <string name="language">Language</string>
    <string name="priSec">T and Cs</string>
    <string name="menu_language">Language</string>
    <string name="menu_prisec">TandCs</string>
    <string name="rusureh">Are you sure?</string>
    <string name="quittingh">Quitting</string>
    <string name="medicine_nameh">Medicine name</string>
    <string name="dosageh">Dosage</string>
    <string name="timeh">Time</string>
    <string name="intervalsh">Intervals of</string>
    <string name="viah">Via</string>
    <string name="penicillinh">Penicillin</string>
    <string name="ivh">IV</string>
    <string name="name_exampleh">Miguel Diaz</string>
    <string name="log_outh">Log Out</string>
    <string name="full_nameh">Full Name</string>
    <string name="phone_numberh">Phone number</string>
    <string name="birthdayh">Birthday</string>
    <string name="englishh">English (North America)</string>
    <string name="add_lenguageh">Add Lenguage</string>
    <string name="home">Home</string>
    <string name="accounth">Account</string>
</resources>