<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_bell"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_eye"
            android:title="@string/night_mode" />
        <item
            android:id="@+id/priSecFragment2"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/priSec" />
        <item
            android:id="@+id/languageFragment2"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/language" />
    </group>
</menu>